--- a/scratch-book/pySpark-Exercise.ipynb
+++ b/scratch-book/pySpark-Exercise.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,18 @@
     "#### If city is null, then set city to 'Unknown'\n",
     "from pyspark.sql.functions import *\n",
     "c_df = df.withColumn('city', when(df.City.isNull(), 'Unknown').otherwise(df.City))\n",
-    "df.show()"
+    "c_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the Job title is null, then delete the row\n",
+    "# df = df.na.drop(subset=['Job Title'])\n",
+    "df_title = df.filter(df.JobTitle.isNotNull())"
    ]
   },
   {
