--- a/scratch-book/pySpark-Exercise.ipynb
+++ b/scratch-book/pySpark-Exercise.ipynb
@@ -148,6 +148,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### If Salary is null then replace it with Average salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sal = df.withColumn('Salary_fix', df.Salary.substr(2,100).cast('float'))\n",
+    "df_sal.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### What are the column names?"
    ]
   },
